[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/testing_light.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
render_priority = 1
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Point1" type="Node2D" parent="."]
position = Vector2( 240.353, 248.493 )

[node name="Sprite" type="Sprite" parent="Point1"]
texture = ExtResource( 2 )

[node name="Node" type="Node" parent="Point1"]

[node name="Line2D" type="Line2D" parent="Point1/Node"]
material = SubResource( 1 )
position = Vector2( 240.353, 248.493 )
points = PoolVector2Array( -1.93262, -1.44171 )
width = 2.0

[node name="Line2D2" type="Line2D" parent="Point1/Node"]
material = SubResource( 2 )
position = Vector2( 240.353, 248.493 )

[node name="Line2D3" type="Line2D" parent="Point1/Node"]
material = SubResource( 3 )
position = Vector2( 240.353, 248.493 )

[node name="Point2" type="Node2D" parent="."]
position = Vector2( 478.041, 492.832 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Point2"]
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
